[project]
name = "lil-socks"
version = "0.1.0"
description = ""
authors = [
    {name = "lil-marsxlll",email = "d.marsele18@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "uvloop (>=0.22.1,<0.23.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
